# skills-agent-proto

./: .env.example  README.md  agent_sdk_overview.md  agent_sdk_python.md  pyproject.toml
.claude/skills/news-extractor/: .gitignore
docs/: architecture_sequence.md
examples/: basic_usage.py  extract_article.py  interactive_chat.py
src/langchain_skills/: agent.py  cli.py  tools.py
src/langchain_skills/stream/: __init__.py  tracker.py  utils.py
src/skills_agent/: __init__.py  agent.py  cli.py
tests/: test_agent.py  test_stream.py
