[project]
name = "skills-agent"
version = "0.1.0"
description = "使用 Claude Agent SDK 构建的能发现和使用 Skills 的 Coding Agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.21",
    "rich>=14.2.0",
]

[project.scripts]
skills-agent = "skills_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skills_agent"]

[tool.uv.sources]
skills-agent = { workspace = true }
